git commit index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Athazagoraphobia</title>
     <body style="background-color:rgb(130, 158, 172);"></body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!DOCTYPE html>
     <html lang="en-us">
@@ -16,7 +18,7 @@
         <script type="text/javascript">
         // register a onkeyup event on the document obj.   // document.onkeyup 
         document.onkeyup = function(event){
-        // inside funciton
+        // inside function
             // var keyPressed = event.key 
             var keyPressed = event.key;
             // console.log (keyPressed)
@@ -137,5 +139,10 @@
                 // alert (wrong try again)
         };
         </script>
+
+<!-- javascript -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
       </body>
     </html>
