--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>Athazagoraphobia</title>
     <body style="background-color:rgb(130, 158, 172);"></body>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
     <!DOCTYPE html>
     <html lang="en-us">
       <head>
@@ -15,25 +12,32 @@
       </head>
       <body>
         <h1>Please press the keys A through Z. Let's walk down memory lane.</h1>
+        <progress id="health" value="100" max="100"></progress>
         <script type="text/javascript">
         // register a onkeyup event on the document obj.   // document.onkeyup 
         document.onkeyup = function(event){
-        // inside function
+        // inside funciton
             // var keyPressed = event.key 
             var keyPressed = event.key;
+            let health = document.getElementById("health")
+            var badKey  = ["a", "c", "e", "f", "k", "l", "n", "o", "p", "s", "t", "x", "y"]
+            var goodKey = ["b", "d", "g", "h", "i", "j", "m", "q", "r", "u", "v", "w", "z"]
             // console.log (keyPressed)
             console.log(keyPressed);
             //if keypressed was A or if keypressed was B or if keyPressed c ... d
             if( keyPressed == "a") {
               alert("You chose A.\n\nYou've always been fond of paper airplanes, but not the unreliable aircrafts themselves.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "b") {
               alert("You chose B.\n\nBlueberries. You wish you had a bowl of succulent, sweet blueberries, for some reason.");
+              health.value += 0; 
             }else {
             } // good
             if( keyPressed == "c") {
               alert("You chose C.\n\nThe image of a burning Volkswagen places itself in your mind.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "d") {
@@ -42,10 +46,12 @@
             } // good
             if( keyPressed == "e") {
               alert("You chose E.\n\nYou remember the small, rickety elevator in your apartment. You hated it as a kid, and always took the stairs.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "f") {
               alert("You chose F.\n\nWhat's orange, hot enough to burn through a human, and loves kerosene?");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "g") {
@@ -66,10 +72,12 @@
             } // good
             if( keyPressed == "k") {
               alert("You chose K.\n\nYou have no idea why, but you've been staring at the keyhole of the door for a whole hour now, almost as if you're hoping you had the key for it. You don't.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "l") {
               alert("You chose L.\n\nIt occurs to you that you're, in short, starving. When's lunch?");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "m") {
@@ -78,14 +86,17 @@
             } // good
             if( keyPressed == "n") {
               alert("You chose N.\n\nYou're thinking of... needles. Not the sowing kind, the crying to sleeping kind.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "o") {
               alert("You chose O.\n\nOatmeal. You hate oatmeal, but you'd pay anything to have it now.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "p") {
               alert("You chose P.\n\nThousands of pedestrians walk that same street every day, not knowing there had been a body outline there.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "q") {
@@ -98,10 +109,12 @@
             } // good
             if( keyPressed == "s") {
               alert("You chose S.\n\nYour family had always told you that you were very sick. It didn't make sense after they stopped giving you medications.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "t") {
               alert("You chose T.\n\nYou're reminded of small white and red tablets. They have a profound, uncomfortable presence in your brain, but you don't remember why.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "u") {
@@ -118,20 +131,25 @@
             } // good
             if( keyPressed == "x") {
               alert("You chose X.\n\nThe memorable letter that could always be found on your college papers. You felt like them now, crossed out.");
+              health.value -= 10; 
             }else {
             } // bad
             if( keyPressed == "y") {
               alert("You chose Y.\n\nPeople say I'm the youngest person here, though I feel like I've grown old with this place.");
+              health.value -= 10; 
             }else {
             } // 
             if( keyPressed == "z") {
               alert("You chose Z.\n\nDon't let your awareness hit zero.");
             }else {
             } // good
-
-            
-
-
+            if (badKey){
+                // console.log(badKey);
+            }else {
+            }
+            function KeyPressCheck(event){
+                console.log('pressed::'+ event.keyCode);
+}
                 // when true 
                 // keep count ... count = 0 ; count = count +1
                 // alert ( "you pressed "+ KeyPressed)
@@ -139,10 +157,9 @@
                 // alert (wrong try again)
         };
         </script>
-
-<!-- javascript -->
+      
+    <!-- javascript -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-      </body>
+        </body>
     </html>
