git commit index.html

--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
     }
 * {
   font-family: Georgia, Times, 'Times New Roman', serif !important
+  
 }
     </style>
 
       <body>
+        <div class="alert alert-info" role="alert">
+               
+          </div>
         <br>
         <center><h1><span class="badge badge-info"><em>Athazagoraphobia</em></span></h1></center>
-        <center><h5><span class="badge badge-dark"><em>The fear of forgetting</em></span></h5></center>
+        <center><h4><span class="badge badge-dark"><em>The fear of forgetting</em></span></h4></center>
         <br>
         <br>
+        <br>
+        <center><h3 style="color:rgba(137, 186, 214, 0.87);">Your sanity is being tested due to an unfortunate action you have recently taken, as well as your thoughts recorded. Are you capable of thinking for yourself?</h3></center>
         <br>
         <center><h3><span class="badge badge-dark">Please press the keys A through Z to start the game.</span></h3></center>
         <center><h3><span class="badge badge-dark">It is encouraged to choose keys at random.</span></h3></center>
