git commit index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,36 @@
         <meta charset="UTF-8">
         <title>Events!</title>
       </head>
+      <body>
+        <div class="demo-wrap">
+            <img
+              class="demo-bg"
+              src="https://www.wallpapertip.com/wmimgs/54-542263_wall.jpg"
+              alt=""
+            >
+            <div class="demo-content">
+              <h1></h1>
+            </div>
+          </div>
+      </body>
       <style>
-        body {
-      background-image: url('');
-    }
+.demo-wrap {
+  overflow: hidden;
+  position: relative;
+}
+
+.demo-bg {
+  opacity: 0.6;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+
+.demo-content {
+  position: relative;
+}
 * {
   font-family: Georgia, Times, 'Times New Roman', serif !important
 }
